# baremental

./: .gitmodules  Cargo.toml  README.md  justfile
.cargo/: config.toml
scripts/: tcp_test.py  udp_test.py
src/: config.rs  console.rs  lang_items.rs  logger.rs  main.rs  plic.rs  trap.asm  trap.rs
src/drivers/: mod.rs  net.rs
src/drivers/dma/: axi_dma.rs  mod.rs
src/drivers/net/: axi_eth.rs  mod.rs
src/net/: interface.rs  mod.rs  reply.rs  socket.rs
