[package]
name = "baremental"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.9.0"
log = "0.4"
riscv = { git = "https://github.com/duskmoon314/riscv.git", branch = "extN", features = ["inline-asm"] }
rv-plic = { git = "https://github.com/duskmoon314/rv-plic" }
nb = "1.0.0"
spin = "0.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
blake3 = { version = "1.2.0", default-features = false }
array-init = "2.0.0"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
axi-ethernet = { git = "https://github.com/zflcs/axi-ethernet.git" }
axi-dma = { git = "https://github.com/zflcs/axi-dma.git", default-features = false, optional = true }
kernel-sync = {  git = "https://github.com/tkf2019/kernel-sync" }
crossbeam = { version = "0.8", default-features = false, features = ["alloc"] }


[features]
async = ["axi-dma/async"]
sync = ["axi-dma/sync"]

default = ["async"]

[dependencies.smoltcp]
version = "0.10.0"
default-features = false
features = [
  "alloc", "log",  # no std
  "medium-ethernet",
  "proto-ipv4",
  "_proto-fragmentation",
  "proto-ipv4-fragmentation",
  "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dns", "socket-dhcpv4"
]